Fixed tags on mobile (hopefully)

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -10,6 +10,7 @@
   color: white;
   background-color: #383838;
   text-decoration: none;
+  display: inline-block;
 }
 
 .tag::hover {
